--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
 name: astrbot_plugin_streamify_router
 display_name: LLM非流请求稳流网关
-desc: LLM非流请求稳流网关，将非流请求转为流式，防止部分包装了cloudflare的中转因非流请求在2min内无响应，而超时自动关闭(429)，并触发 'NoneType' object has no attribute 'get' 问题
+desc: LLM非流请求稳流网关，将非流请求在请求过程中转为流式，保持连接，防止部分包装了cloudflare的中转因非流请求在2min内无响应，而超时自动关闭(429)，并触发 'NoneType' object has no attribute 'get' 问题
 version: v0.1.0
 author: LiJinHao999
 repo: https://github.com/LiJinHao999/astrbot_plugin_streamify_router
